# NeuPAN-ROS2-Real-Robot

./: README.md
neupan_ros/: CMakeLists.txt  README.md  package.xml  setup.py
neupan_ros-main/: CHANGELOG.md  CMakeLists.txt  README_ROS2.md  REAL_ROBOT_DEPLOYMENT.md  ROS2_MIGRATION_SUMMARY.md  package.xml
neupan_ros-main/config/: minimal_test_config.yaml  neupan_omni_robot.yaml
neupan_ros-main/launch/: complete_test_neupan.launch.py  enhanced_simulation.launch.py  neupan_navigation_test.launch.py  neupan_ros2.launch.py  neupan_rviz.launch.py  neupan_simulation_test.launch.py  neupan_test.launch.py  neupan_visual_bringup.launch.py  neupan_with_pointlio.launch.py  neupan_with_visualization.launch.py  real_neupan_navigation_test.launch.py  test_gazebo.launch.py  test_neupan_controller.launch.py  visual_controller_test.launch.py  visual_test_neupan.launch.py
neupan_ros-main/resource/: neupan_ros
neupan_ros-main/rviz/: basic_neupan.rviz  neupan_controller_test.rviz  neupan_enhanced_simulation.rviz  neupan_simple.rviz  simple_visual_test.rviz
neupan_ros-main/scripts/: check_topics.sh  neupan_visual_test.sh  simple_neupan_test.sh  start_visual_test.sh  test_neupan_navigation.sh
neupan_ros-main/test/: test_import.py
neupan_ros/config/: neupan_real_robot.yaml
neupan_ros/launch/: neupan_ros2.launch.py  neupan_with_pointlio.launch.py
neupan_ros/neupan_ros/: __init__.py  neupan_core_ros2.py  neupan_node_ros2.py
neupan_ros/resource/: neupan_ros
neupan_ros2/: README.md  package.xml  setup.py
neupan_ros2/config/: neupan_real_robot.yaml  test_neupan_controller.yaml
neupan_ros2/launch/: gazebo_simulation_launch.py  neupan_omni_robot.launch.py  neupan_with_pointlio.launch.py
neupan_ros2/neupan_ros/: __init__.py  neupan_core_ros2.py  neupan_node_ros2.py
neupan_ros2/rviz/: neupan_visualization.rviz
point_lio/: README.md
