<?xml version="1.0"?>
<package format="3">
  <name>neupan_ros</name>
  <version>1.0.0</version>
  <description>The neupan_ros package - ROS2 Humble wrapper for NeuPAN planner</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="hanrh@connect.hku.hk">Ruihua Han</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPL-3.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://github.com/huapu-kaf/NeuPAN-ROS2-Real-Robot</url>
  <url type="repository">https://github.com/huapu-kaf/NeuPAN-ROS2-Real-Robot</url>
  <url type="bugtracker">https://github.com/huapu-kaf/NeuPAN-ROS2-Real-Robot/issues</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="hanrh@connect.hku.hk">Ruihua Han</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>